kube-infrasructure/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - pulse.dev.tipsytypes.com
      secretName: apps-tls-dev
  rules:
    - host: pulse.dev.tipsytypes.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pulse-backend-service
                port:
                  number: 8000
