kube-infrasructure/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - pulse.tipsytypes.com
      secretName: pulse-tls-prod
    - hosts:
        - reflct.tipsytypes.com
      secretName: reflct-tls-prod
    - hosts:
        - reflct-api.tipsytypes.com
      secretName: reflct-api-tls-prod
  rules:
    - host: pulse.tipsytypes.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pulse-backend-service
                port:
                  number: 8000
    - host: reflct.tipsytypes.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: reflct-service
                port:
                  number: 80
    - host: reflct-api.tipsytypes.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: reflct-api-service
                port:
                  number: 8000
